Most Styles in with Flexgrid

--- a/example-test.html
+++ b/example-test.html
@@ -17,7 +17,8 @@
 			}
 			
 			MediaManager.Initialize({
-				path: 'media-manager/'
+				path: 'media-manager/',
+				postmessageParent: 'http://localhost/'
 			});
 
 			$('.various').on('click', function(e){
