More Styes and Filter Panel

--- a/example-test.html
+++ b/example-test.html
@@ -43,8 +43,8 @@
 </head>
 <body>
 
-<a href="#" class="various" data-fancybox-type="iframe" data-filter-type="images">Open Media Manager</a><br>
-<a href="#" class="other" data-fancybox-type="iframe" data-filter-type="videos">Textsr</a>
+<a href="#" class="various" data-filter-type="images" data-select-mode="single">Open Media Manager</a><br>
+<a href="#" class="other" data-filter-type="videos" data-select-mode="multiple">Textsr</a>
 	
 </body>
 </html>
