Media Listing filters Set

--- a/example-test.html
+++ b/example-test.html
@@ -43,8 +43,9 @@
 </head>
 <body>
 
-<a href="#" class="various" data-filter-type="images" data-select-mode="single">Open Media Manager</a><br>
-<a href="#" class="other" data-filter-type="videos" data-select-mode="multiple">Textsr</a>
+<a href="#" class="various" data-filter-type="image" data-select-mode="single">Open Media Manager</a><br>
+<a href="#" class="other" data-filter-type="video" data-select-mode="multiple">Textsr</a><br>
+<a href="#" class="other" data-select-mode="multiple">All</a>
 	
 </body>
 </html>
