--- a/example-test.html
+++ b/example-test.html
@@ -26,7 +26,7 @@
 
 			MediaManager.Initialize({
 				path: 'mm-app/',
-				postmessageParent: 'http://localhost/'
+				// postmessageParent: 'http://localhostqwe/'
 			});
 
 			$('#btn-single .btn').on('click', function(e){
