--- a/example-test.html
+++ b/example-test.html
@@ -6,6 +6,12 @@
 	
 	<!-- For Example Page formatting -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<style>
+		body {
+			font-size: 14px;
+		}
+	</style>
+
 	
 	<!-- Dependencies -->
 	<link rel="stylesheet" href="mm-dependencies/jq-fancybox/jquery.fancybox.css"> 
