--- a/example-test.html
+++ b/example-test.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	
 	<!-- For Example Page formatting -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" href="example_files/bootstrap.min.css" crossorigin="anonymous">
 	<style>
 		body {
 			font-size: 14px;
@@ -32,6 +32,7 @@
 
 			MediaManager.Initialize({
 				path: 'mm-app/',
+				// flf_page: false
 				// postmessageParent: 'http://localhostqwe/'
 			});
 
