--- a/example-test.html
+++ b/example-test.html
@@ -73,7 +73,7 @@
 			<div id="btn-single" class="input-group">
 				<input type="text" class="form-control" placeholder="Search for...">
 				<span class="input-group-btn">
-					<button class="btn btn-default" type="button" data-filter-type="image" data-select-mode="single">Get Image</button>
+					<button class="btn btn-default" type="button" data-filter-type="image" data-select-mode="single"  data-select-folder="1">Get Image</button>
 				</span>
 			</div>
 		</div>
@@ -83,7 +83,7 @@
 
 	<h2>Multiple</h2>
 
-	<div id="btn-multiple" class="btn btn-default"  data-filter-type="image" data-select-mode="multiple">Get Images</div>
+	<div id="btn-multiple" class="btn btn-default"  data-filter-type="image" data-select-mode="multiple" data-select-folder="0">Get Images</div>
 
 	<div class="row">
 		<div class="col-xs-12 col-sm-6">
