Changed Picie gulp loction and bug fixes

--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	
 	<!-- For Example Page formatting -->
-	<link rel="stylesheet" href="example_files/bootstrap.min.css" crossorigin="anonymous">
+	<link rel="stylesheet" href="demo_files/bootstrap.min.css" crossorigin="anonymous">
 	<style>
 		body {
 			font-size: 14px;
