Added Natual Sorting

--- a/demo.html
+++ b/demo.html
@@ -32,7 +32,8 @@
 
 			MediaManager.Initialize({
 				path: 'dist/mm-app/',
-				getMediaListing: 'http://localhost/MediaManager/demo_files/mm-data-orientation.json'
+				//getMediaListing: 'http://localhost/MediaManager/demo_files/mm-data-orientation.json'
+				getMediaListing: 'http://localhost/MediaManager/demo_files/mm-data-file-sort.json'
 				// flf_page: false
 				// postmessageParent: 'http://localhostqwe/'
 			});
