--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,10 @@
 
 	
 	<!-- Dependencies -->
-	<link rel="stylesheet" href="dist/mm-dependencies/jq-fancybox/jquery.fancybox.css"> 
+	<link rel="stylesheet" href="dist/mm-dependencies/jq-fancybox/jquery.fancybox.css">
+	<style>
+		.mm-custom-wrapper .fancybox-inner {border-radius: 3px;}
+	</style> 
 
 	<script src="dist/mm-dependencies/jquery-1.12.0.min.js"></script>
 	<script src="dist/mm-dependencies/q.js"></script>
